src/styles/index.scss
/* the following import is used by react-scripts to bring in the normalize.css styles */
@import-normalize;

/* Import custom fonts */
@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap");

/***************************/
/*  Common Styles          */
/***************************/

body {
    padding: 0;
    border: 0;
    font: inherit;
    vertical-align: baseline;
    font-family: 'Plus Jakarta Sans', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
        'Helvetica Neue', sans-serif;
    background-color: #E7F0DC;
    font-size: 16px;
    line-height: 26px;
    margin: 0 auto;
    width: 96vw;
    height: 96vh;
}

::selection {
  color: #fff;
  background-color: #755CDE;
}

::placeholder {
  color: #000;
}

h1,
h2,
h3,
h4 {
    text-rendering: optimizeLegibility;
}

/***************************/
/*  Utils                  */
/***************************/

.float-right {
    float: right;
}

.float-left {
    float: left;
}

.clearfix:before,
.clearfix:after {
    content: ' ';
    display: table;
}

.clearfix:after {
    clear: both;
}

/***************************/
/*  Header                 */
/***************************/

.header-container {
    padding: 20px 10px;
    margin: 0 auto;
    width: 100%;
    border-bottom: 1px solid #eee;

    .header-inner {
        max-width: 850px;
        margin: 0 auto;
        display: flex;
        align-items: center;
        justify-content: space-between;
    }

    .site-avatar {
        display: flex;
        margin-right: 15px;
        background-color: none;

        img {
            width: 65px;
            height: 65px;
            border-radius: 5px;
        }
    }

    .burger-icon {
        display: none;
        cursor: pointer;
        width: 25px;
        height: 20px;
        padding-right: 20px;
        position: relative;
        z-index: 11;

        .burger-lines {
            span {
                display: block;
                width: 100%;
                height: 3px;
                background-color: #333;
                margin-bottom: 5px;
            }
        }

        .cross-icon {
            font-size: 25px;
            line-height: 20px;
            color: #333;
        }
    }

    .header-nav {
        float: right;
        margin-top: 0px;
        font-size: 18px;
        display: inline-block;
        vertical-align: middle;

        ul {
            margin: 0;
            padding: 0;
        }

        li {
            list-style-type: none;
            display: inline-block;
        }

        a {
            white-space: nowrap;
            text-decoration: none;
            padding: 14px 30px;
            color: #495057;
            border-radius: 4px;
            background-color: transparent;
            letter-spacing: 1px;
            display: inline-block;
        }

        a:hover {
            background-color: #755cde;
            color: #fff;
            border-radius: 35px;
        }

        .nav-link-selected {
            font-weight: 600;
            background-color: #000;
            color: #fff;
            border-radius: 35px;
        }

        // Mobile styles for burger menu
        @media (max-width: 768px) {
            position: fixed;
            top: 0;
            right: 0;
            width: 40%;
            height: 45%;
            border-radius: 10px;
            border: 1px solid black;
            background-color: rgb(158 158 158 / 96%);
            box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
            transform: translateX(100%);
            transition: transform 0.3s ease-in-out;
            z-index: 10;
            padding-top: 50px;
            
            ul {
                display: block;
                margin-top: 20px;
                text-align: center;
            }

            li {
                display: block;
                padding: 15px 0;
            }

            &.open {
                transform: translateX(0);
            }
        }
    }

    @media (max-width: 768px) {
        .burger-icon {
            display: flex;
            flex-direction: column;
            justify-content: space-between;
            z-index: 11;
        }

        .header-nav {
            display: none;
        }

        .header-nav.open {
            display: block;
        }

        // Overlay effect on homepage content
        body {
            overflow: hidden;
        }
    }
}


/***************************/
/*  Footer                 */
/***************************/

.footer {
    bottom: 0;
    height: 110px;
    font-size: 1.4em;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.footer-social-links {
    margin-top: 40px;
    min-height: 40px;
}

.social-link {
    margin: 0;
    text-decoration: none;
    position: relative;
    display: inline-block;
    height: 35px;
    width: 35px;
    line-height: 1.45;
    font-weight: 400;
    user-select: text;

    &:before {
        content: attr(data-title);
        display: none;
        position: absolute;
        bottom: 64px;
        left: -6px;
        margin: 0 auto;
        font-size: 13px;
        padding: 3px 10px;
        background: #222;
        color: #fff;
        border-radius: 2px;
        height: 22px;
        line-height: 22px;
        opacity: 0;
        transition: opacity 150ms linear, transform 150ms linear;
        transform: translate3d(0, -8px, 0);
        z-index: 99;
    }

    .social-link-icon {
        height: 30px;
        width: 35px;
        text-align: center;
        display: inline-block;
        color: #000;
        margin: 7px auto;
    }

    &:hover {
        fill: #755cde;
        white-space: pre-wrap;

        &:before {
            opacity: 1;
            display: inline-block;
            white-space: nowrap;
            left: 50%;
            transform: translateX(-50%);
        }

        &:after {
            opacity: 1;
            transform: translate3d(0, 0, 0);
        }
    }
}

.footer .social-link {
    flex: 1;
    padding: 0.7em;
    color: #333;
    transition: transform 0.14s;
}

.footer .social-link:hover {
    transform: translateY(-10px);
}

.footer .social-link .social-link-icon {
    animation: popUp 6s infinite ease-out;
}

.footer a:nth-child(3) .fa {
    animation-delay: 0.14s;
}

.footer a:nth-child(4) .fa {
    animation-delay: 0.14s;
}

.footer a:nth-child(2) .fa {
    animation-delay: 0.28s;
}

.footer a:nth-child(5) .fa {
    animation-delay: 0.28s;
}

.footer a:nth-child(1) .fa {
    animation-delay: 0.42s;
}

.footer a:nth-child(6) .fa {
    animation-delay: 0.42s;
}

/***************************/
/*  Home Page              */
/***************************/

.home-page-container {
    height: 100%;
    width: 96%;
    margin: 0 auto;
    max-width: 1110px;
    margin-top: 125px;
}

.home-container__inner {
    display: flex;
    margin: 0 auto;
    align-items: center;
    text-align: center;
    position: relative;
    justify-content: space-between;
    flex-direction: column;

    article {
        width: 50%;
    }
}

.home-container__animated {
    animation: fade-in-down 0.6s;
    animation-delay: 0.3s;
    animation-fill-mode: both;
}

.home-profile-pic {
    width: 300px;
    height: 300px;
    max-width: 450px;
    margin-bottom: 25px;
    border-radius: 100%;
    transition: all 0.2s;
    box-shadow: none;
    opacity: 1;
}

.home-title {
  font-size: 2em;
  margin: 10px 0 12px;
  letter-spacing: 0.08rem;
  color: #222;
  font-weight: 700;
  line-height: 1.2em;
}

.home-description {
    color: #7a746e;
    font-size: 1.15em;
    line-height: 1.75em;
}

/***************************/
/*  About Page             */
/***************************/

blockquote {
    border-left: 1px solid #e5e5e5;
    margin: 0;
    padding: 0 0 0 20px;
    font-style: italic;
}

.about-separator {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #eee;
    padding: 0;
    margin-left: -25px;
    margin-top: 30px;
    margin-bottom: 25px;
}

.about-wrapper {
    width: 80%;
    max-width: 800px;
    margin: 0 auto;
}

.about-links-container > a {
    text-decoration: none;
    margin: 3px 6px 3px 0;
}

.about-skills-table tr:nth-child(odd) {
    background-color: #fff;
}

.about-skills-table tr:nth-child(even) {
    background-color: #f1f1f1;
}

.about-skills-table tr {
    border-bottom: 1px solid #ddd;
}

.about-skills-table th:first-child,
.about-skills-table td:first-child {
    padding-left: 16px;
}

.about-skills-table td,
.about-skills-table th {
    padding: 8px 8px;
    display: table-cell;
    text-align: left;
    vertical-align: top;
}

.about-skills-table th {
    font-weight: bold;
}

.about-skills-table {
    font-size: 13px !important;
    border: 1px solid #ccc;
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;
    display: table;
}

/***************************/
/*  Timeline Page          */
/***************************/

.vertical-timeline-container {
    width: 80%;
    max-width: 700px;
    margin: 0 auto;
    margin-top: 25px;
}

/***************************/
/*  Contact Page           */
/***************************/

.contact-container {
    width: 80%;
    max-width: 700px;
    margin: 0 auto;
    margin-top: 25px;
}

.contact-header {
  line-height: 1.5em;
  font-size: 2.5em;
  letter-spacing: .08rem;
  color: #000;
}

.contact-text {
    margin: 2em auto;
    line-height: 1.6;
}

.contact-form-container {
    margin-left: -20px;
}

.contact-form-name,
.contact-form-email {
    padding: 20px 20px;
    width: 50%;
    clear: none;
    margin-left: 0;
    float: left;
    box-sizing: border-box;
}

.contact-message-form-field {
    line-height: 1.25em;
    transition: all 0.35s ease-in-out;
    border: solid 1px rgba(0, 0, 0, 0.15);
    background: rgba(255, 255, 255, 0.75);
    width: 100%;
    border-radius: 0.35em;
    padding: 0.75em 1em 0.75em 1em;
    outline: 0;
    position: relative;
    display: block;
    font-family: 'Source Sans Pro', sans-serif;
    color: #888;

    &:hover {
        border: 1px solid;
    }

    &:focus {
        box-shadow: 0 0 0 1px #1264a3, 0 0 0 5px rgba(29, 155, 209, 0.3);
        border-radius: 4px;
        border-color: transparent;
    }
}

.contact-message-textarea {
    resize: vertical;
    overflow-wrap: break-word;
    outline: none;
    margin: 20px;
    padding: 20px;
    width: calc(100% - 54px);
}

.contact-submit-btn {
    border: none;
    color: white;
    padding: 12px 30px;
    text-align: center;
    font-weight: 600;
    cursor: pointer;
    transition: background-color 0.35s ease-in-out;
    float: right;
    margin-top: 10px;
    margin-right: -8px;

    height: 3.5em;
    letter-spacing: .03em;
    border-radius: 9999px;
    background-color: #000;

    &:hover {
      background-color: #755cde;
    }

    &:focus {
        box-shadow: 0 0 0 1px #1264a3, 0 0 0 5px rgba(29, 155, 209, 0.3);
        border-radius: 4px;
        border-color: transparent;
    }
}

